gateway로 인가를 옮기려고 했지만 사용자의 구분(독자/작가/관리자)에 따라 인가를 주는게 잘 안되어서 일단 모든 요청을 허용(Get /manager/Readers/** 제외)